# Sigmoid

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: bencher.hpp  bitops.hpp  board.hpp  codestyle  color.hpp  constants.hpp  engine.hpp  helper.hpp  history.hpp  magics.hpp  mailbox.hpp  main.cpp  move.hpp  movegen.hpp  movelist.hpp  movepick.hpp  pairbitboard.hpp  piece.hpp  search.hpp  see.hpp  state.hpp  thread.hpp  thread_helper.hpp  timer.hpp  tt.hpp  uci.hpp  worker.hpp  worker_helper.hpp  zobrist.hpp
src/nnue/: accumulator.hpp  nnue.hpp  nnue_consts.hpp  sentinel_nnue.hpp
src/tests/: board_tests.hpp  color_tests.hpp  mailbox_tests.hpp  move_tests.hpp  movegen_tests.hpp  pairbitboard_tests.hpp  see_tests.hpp  test.hpp  test_helper.hpp  test_runner.hpp  zobrist_tests.hpp
